--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -2,9 +2,9 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners
-        android:bottomLeftRadius="60dp"
-        android:bottomRightRadius="60dp"
-        android:topLeftRadius="60dp"
-        android:topRightRadius="60dp" />
-    <solid android:color="@color/darkblue" />
+        android:bottomLeftRadius="14dp"
+        android:bottomRightRadius="14dp"
+        android:topLeftRadius="14dp"
+        android:topRightRadius="14dp" />
+    <solid android:color="@color/blue" />
 </shape>
