--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -3,17 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="409dp"
-    android:layout_height="729dp"
+    android:layout_height="760dp"
     android:contentDescription="123"
     android:fillViewport="true"
-    tools:layout_editor_absoluteX="1dp"
-    tools:layout_editor_absoluteY="1dp"
+    android:padding="20dp"
+    android:paddingRight="20dp"
     tools:context=".InfoFragment"
-    android:padding="20dp">
+    tools:layout_editor_absoluteX="1dp"
+    tools:layout_editor_absoluteY="1dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingRight="20dp"
         tools:context=".Info2">
 
 
@@ -34,14 +36,14 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Общая информация:"
             android:textColor="@color/grey"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            android:layout_marginTop="30dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <TextView
             android:id="@+id/textView3"
@@ -51,71 +53,73 @@
             android:fontFamily="@font/inter_light"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
             android:text="Мой Дом - это приложение для резервирования специальных помещений Дома молодёжи РУТ МИИТ под мероприятия. Нужно провести конференцию? Организовать митап? Сделать профессиональные фотографии? Дом моложёжи РУТ МИИТ - это Ваш вариант!"
             android:textColor="@color/black"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            android:paddingLeft="24dp"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/inter_extralight"
             android:text="График работы Дома:"
-            android:textColor="@color/grey"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3"
-            android:layout_marginTop="30dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_text_shape"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
+            android:paddingLeft="10dp"
+
             android:text="По будням с 10:00 до 20:00"
             android:textColor="@color/black"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="24dp"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Адрес:"
             android:textColor="@color/grey"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
-            android:layout_marginTop="30dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
         <TextView
             android:id="@+id/adress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/button_text_shape"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:text="ул. Образцова, 21"
+            android:paddingLeft="10dp"
+
             android:textColor="@color/black"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="24dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
         <TextView
             android:id="@+id/textView8"
             android:layout_width="match_parent"
@@ -133,64 +137,88 @@
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Лекторий:"
             android:textColor="@color/grey"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8"
-            android:layout_marginTop="20dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-        <ImageView
-            android:id="@+id/imageView"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view2"
             android:layout_width="match_parent"
-            android:layout_height="135dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/lect"
+            android:layout_height="136dp"
+            app:cardCornerRadius="12dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintTop_toBottomOf="@id/textView9">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="match_parent"
+                android:layout_height="135dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/lect"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/textView10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@drawable/button_text_shape"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:text="40 посадочных мест с мини-столиками, маркерная доска, жк-экран 60 дюймов"
             android:textColor="@color/black"
             android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:paddingLeft="24dp"
+            android:paddingLeft="10dp"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/card_view2" />
 
         <TextView
             android:id="@+id/textView11"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Переговорная:"
             android:textColor="@color/grey"
             android:textSize="20dp"
-            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
-        <ImageView
-            android:id="@+id/imageView2"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="135dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/govor"
+            android:layout_height="136dp"
+            app:cardCornerRadius="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+            app:layout_constraintTop_toBottomOf="@id/textView11">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="match_parent"
+                android:layout_height="135dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/govor"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView11" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/login_label"
@@ -198,38 +226,50 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/button_text_shape"
-            android:paddingLeft="24dp"
             android:paddingTop="10dp"
+            android:paddingLeft="10dp"
+
             android:paddingBottom="10dp"
             android:text="12 посадочных мест, из них отдельная зона на 6 мест, маркерная доска"
             android:textColor="@color/black"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintTop_toBottomOf="@+id/card_view" />
 
         <TextView
             android:id="@+id/textView13"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/inter_extralight"
             android:text="Коворкинг:"
             android:textColor="@color/grey"
             android:textSize="20dp"
-            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_label" />
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="135dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/covo"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_view6"
+            android:layout_width="match_parent"
+            android:layout_height="136dp"
+            app:cardCornerRadius="12dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView13" />
+            app:layout_constraintTop_toBottomOf="@id/textView13">
+
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="135dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/covo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView13" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/textView14"
@@ -237,15 +277,16 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/button_text_shape"
-            android:paddingLeft="24dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="8 рабочих мест с розетками, 11 посадочных мест, из них отдельная зона на 6 мест, маркерная доска"
             android:textColor="@color/black"
             android:textSize="20dp"
+            android:paddingLeft="10dp"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+            app:layout_constraintTop_toBottomOf="@+id/card_view6" />
 
         <TextView
             android:id="@+id/textView15"
@@ -260,15 +301,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
-        <ImageView
-            android:id="@+id/imageView4"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/carryVelocity"
             android:layout_width="match_parent"
-            android:layout_height="135dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/photo"
+            android:layout_height="136dp"
+            app:cardCornerRadius="12dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView15" />
+            app:layout_constraintTop_toBottomOf="@id/textView15">
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="match_parent"
+                android:layout_height="135dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/photo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView15" />
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/textView16"
@@ -276,14 +328,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@drawable/button_text_shape"
-            android:paddingLeft="24dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="два гримёрных зеркала, белый фотофон, хромакей, шторы блэкаут"
             android:textColor="@color/black"
             android:textSize="20dp"
+            android:paddingLeft="10dp"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+            app:layout_constraintTop_toBottomOf="@+id/carryVelocity" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
