--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,15 +6,15 @@
     android:layout_height="700dp"
     android:fillViewport="true"
     tools:context=".ProfileFragment"
-    android:padding="10dp">
+    android:padding="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingLeft="45dp"
-        android:paddingRight="45dp"
+        android:paddingLeft="42dp"
+        android:paddingRight="42dp"
         tools:context=".ProfileActiviry">
 
         <TextView
@@ -144,7 +144,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
             android:background="@drawable/button_time_shape"
             android:ems="10"
             android:fontFamily="@font/inter_light"
@@ -154,7 +153,7 @@
             android:padding="5dp"
             android:paddingLeft="10dp"
             android:rotationX="7"
-            android:textColorHint="@color/black"
+            android:textColorHint="@drawable/selector"
             app:layout_constraintBottom_toTopOf="@+id/textView6"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -177,7 +176,7 @@
             android:inputType="text"
             android:minHeight="48dp"
             android:paddingLeft="10dp"
-            android:textColorHint="@color/black"
+            android:textColorHint="@drawable/selector"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/textView7"
             app:layout_constraintEnd_toEndOf="parent"
@@ -197,7 +196,7 @@
             android:minHeight="48dp"
             android:padding="5dp"
             android:paddingLeft="10dp"
-            android:textColorHint="@color/black"
+            android:textColorHint="@drawable/selector"
             app:layout_constraintBottom_toTopOf="@+id/textView10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -218,7 +217,7 @@
             android:minHeight="48dp"
             android:padding="5dp"
             android:paddingLeft="10dp"
-            android:textColorHint="@color/black"
+            android:textColorHint="@drawable/selector"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/textView9"
             app:layout_constraintEnd_toEndOf="parent"
@@ -241,7 +240,7 @@
 
             android:padding="5dp"
             android:paddingLeft="10dp"
-            android:textColorHint="@color/black"
+            android:textColorHint="@drawable/selector"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/textView8"
             app:layout_constraintEnd_toEndOf="parent"
@@ -263,7 +262,7 @@
             android:minHeight="48dp"
             android:padding="5dp"
             android:paddingLeft="10dp"
-            android:textColorHint="@color/black"
+            android:textColorHint="@drawable/selector"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
             app:layout_constraintEnd_toEndOf="parent"
