--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,8 +2,10 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:contentDescription="123"
+
     android:layout_width="match_parent"
-    android:layout_height="700dp"
+    android:layout_height="650dp"
     android:fillViewport="true"
     tools:context=".ProfileFragment"
     android:padding="0dp">
@@ -11,85 +13,102 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
         android:paddingLeft="42dp"
         android:paddingRight="42dp"
         tools:context=".ProfileActiviry">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/exitAccount"
+            android:layout_width="205dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_blue_shape"
+            android:fontFamily="@font/inter_bold"
+            android:text="Выйти  из аккаунта"
+            android:textAllCaps="false"
+            android:textColor="@color/white4"
+
+            android:textSize="20sp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/changeAccount" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/deleteAccount"
+            android:layout_width="205dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_blue_shape"
+            android:fontFamily="@font/inter_bold"
+            android:text="Удалить аккаунт"
+            android:textAllCaps="false"
+            android:textColor="@color/white4"
+
+            android:textSize="20sp"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/exitAccount" />
+
 
         <TextView
             android:id="@+id/title_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:fontFamily="@font/inter_bold"
             android:gravity="center"
             android:text="Настройки профиля"
+
             android:textColor="@color/blue"
             android:textSize="35sp"
-
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/buttonLogin"
+            android:id="@+id/changeAccount"
             android:layout_width="205dp"
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="4dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/button_blue_shape"
             android:fontFamily="@font/inter_bold"
             android:text="Изменить данные"
             android:textAllCaps="false"
             android:textColor="@color/white4"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText3"
-            app:layout_constraintVertical_bias="0.967" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:fontFamily="@font/inter_extralight"
-            android:text="Логин"
-
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_profile" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="7dp"
-            android:layout_marginBottom="2dp"
-            android:fontFamily="@font/inter_extralight"
+            android:layout_marginTop="20dp"
 
-            android:text="ФИО"
+            android:fontFamily="@font/inter_extralight"
+            android:text="Email"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.25"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+            app:layout_constraintTop_toBottomOf="@+id/title_profile" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/inter_extralight"
-            android:text="Институт"
 
+            android:text="Пароль"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -99,12 +118,11 @@
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/inter_extralight"
-            android:hint="Электронная  почта"
-            android:textSize="20sp"
+            android:hint="ФИО"
 
-            app:layout_constraintBottom_toTopOf="@+id/editTextText4"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -114,52 +132,14 @@
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
+            android:layout_marginTop="15dp"
             android:fontFamily="@font/inter_extralight"
-            android:text="Пароль"
 
+            android:text="Институт"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextText4" />
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/inter_extralight"
-            android:text="Номер телефона"
-
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/editTextText6"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
-
-        <EditText
-            android:id="@+id/editTextText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/button_time_shape"
-            android:ems="10"
-            android:fontFamily="@font/inter_light"
-            android:hint="Логин"
-            android:inputType="text"
-            android:minHeight="48dp"
-            android:padding="5dp"
-            android:paddingLeft="10dp"
-            android:rotationX="7"
-            android:textColorHint="@drawable/selector"
-            app:layout_constraintBottom_toTopOf="@+id/textView6"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
-            tools:textSize="20sp" />
 
         <EditText
             android:id="@+id/editTextText2"
@@ -167,7 +147,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
 
-            android:layout_marginBottom="10dp"
             android:background="@drawable/button_time_shape"
 
             android:ems="10"
@@ -178,7 +157,6 @@
             android:paddingLeft="10dp"
             android:textColorHint="@drawable/selector"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -188,6 +166,7 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:background="@drawable/button_time_shape"
             android:ems="10"
             android:fontFamily="@font/inter_light"
@@ -197,7 +176,6 @@
             android:padding="5dp"
             android:paddingLeft="10dp"
             android:textColorHint="@drawable/selector"
-            app:layout_constraintBottom_toTopOf="@+id/textView10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -207,7 +185,6 @@
             android:id="@+id/editTextText4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
             android:background="@drawable/button_time_shape"
             android:ems="10"
             android:fontFamily="@font/inter_light"
@@ -219,7 +196,6 @@
             android:paddingLeft="10dp"
             android:textColorHint="@drawable/selector"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -229,7 +205,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="10dp"
             android:background="@drawable/button_time_shape"
             android:ems="10"
 
@@ -242,33 +217,9 @@
             android:paddingLeft="10dp"
             android:textColorHint="@drawable/selector"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
-
-        <EditText
-            android:id="@+id/editTextText6"
-
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="9dp"
-            android:background="@drawable/button_time_shape"
-            android:ems="10"
-            android:fontFamily="@font/inter_light"
-            android:hint="Номер телефона"
-            android:inputType="text"
-            android:minHeight="48dp"
-            android:padding="5dp"
-            android:paddingLeft="10dp"
-            android:textColorHint="@drawable/selector"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
