--- a/app/src/main/res/layout/fragment_rent.xml
+++ b/app/src/main/res/layout/fragment_rent.xml
@@ -1,110 +1,136 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".RentFragment"
-    android:padding="@dimen/base_padding">
-    <TextView
-        android:id="@+id/title_rent_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/inter_bold"
-        android:text="Бронирование"
-        android:textSize="40sp"
-        android:layout_marginVertical="@dimen/vertical_margin"
-        android:textColor="@color/darkblue"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <CalendarView
-        android:id="@+id/calendarView"
-        android:layout_width="wrap_content"
-        android:theme="@style/CalenderViewDateCustomText"
+    android:layout_height="650dp"
+    android:contentDescription="123"
+    android:fillViewport="true"
+    android:padding="0dp"
+    tools:context=".RentFragment">
 
-    android:dateTextAppearance="@style/CalenderViewWeekCustomText"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_rent_label"/>
-
-    <TextView
-        android:id="@+id/describe_label_1"
-        style="@style/DescribeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Помещение:"
-        app:layout_constraintStart_toStartOf="@+id/calendarView"
-        app:layout_constraintTop_toBottomOf="@+id/calendarView" />
-
-
-    <androidx.cardview.widget.CardView
-        android:layout_marginVertical="6dp"
-        android:id="@+id/cardView"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/input_edittext_background"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
         android:padding="@dimen/base_padding"
-        android:outlineAmbientShadowColor="@color/black"
-        app:cardBackgroundColor="@color/blue4"
-        app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toEndOf="@id/calendarView"
-        app:layout_constraintStart_toStartOf="@+id/calendarView"
-        app:cardCornerRadius="60dp"
-        app:layout_constraintTop_toBottomOf="@id/describe_label_1">
+        tools:context=".RentFragment">
+
+        <TextView
+            android:id="@+id/title_rent_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/vertical_margin"
+            android:fontFamily="@font/inter_bold"
+            android:text="Бронирование"
+            android:textColor="@color/darkblue"
+            android:textSize="40sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:dateTextAppearance="@style/CalenderViewWeekCustomText"
+            android:theme="@style/CalenderViewDateCustomText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_rent_label" />
+
+        <TextView
+            android:id="@+id/describe_label_1"
+            style="@style/DescribeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Помещение:"
+            app:layout_constraintStart_toStartOf="@+id/calendarView"
+            app:layout_constraintTop_toBottomOf="@+id/calendarView" />
 
 
-        <Spinner
-            android:id="@+id/spinner"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
             android:layout_width="match_parent"
-            android:padding="12dp"
-            android:paddingLeft="10dp"
-            android:layout_height="match_parent" />
-    </androidx.cardview.widget.CardView>
+            android:layout_height="50dp"
+            android:layout_marginVertical="6dp"
+            android:background="@drawable/input_edittext_background"
+            android:outlineAmbientShadowColor="@color/black"
+            android:padding="@dimen/base_padding"
+            app:cardBackgroundColor="@color/blue4"
+            app:cardCornerRadius="60dp"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="@id/calendarView"
+            app:layout_constraintStart_toStartOf="@+id/calendarView"
+            app:layout_constraintTop_toBottomOf="@id/describe_label_1">
 
 
-    <TextView
-        android:id="@+id/describe_label_2"
-        style="@style/DescribeTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="@dimen/vertical_margin"
-        android:text="Цель посещения:"
-        app:layout_constraintStart_toStartOf="@+id/describe_label_1"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
-
-    <EditText
-        android:id="@+id/textInputLayout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="@drawable/input_edittext_background"
-        android:gravity="center_vertical"
-        android:paddingLeft="24dp"
-        android:hint="Ваша цель посещения"
-        android:textColorHint="@color/black"
-        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
-        app:layout_constrainedWidth="true"
-        app:layout_constraintEnd_toEndOf="@id/cardView"
-        app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@id/describe_label_2">
-
-    </EditText>
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/booking_button"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:fontFamily="@font/inter_bold"
-        android:text="Далее"
-        android:layout_margin="@dimen/vertical_margin"
-        android:textColor="@color/white"
-        android:background="@drawable/button_background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="12dp"
+                android:paddingLeft="10dp" />
+        </androidx.cardview.widget.CardView>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/describe_label_2"
+            style="@style/DescribeTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/vertical_margin"
+            android:text="Цель посещения:"
+            app:layout_constraintStart_toStartOf="@+id/describe_label_1"
+            app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+        <EditText
+            android:id="@+id/textInputLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/input_edittext_background"
+            android:gravity="center_vertical"
+            android:hint="Ваша цель посещения"
+            android:paddingLeft="24dp"
+            android:textColorHint="@color/black"
+            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
+            app:layout_constrainedWidth="true"
+            app:layout_constraintEnd_toEndOf="@id/cardView"
+            app:layout_constraintStart_toStartOf="@+id/cardView"
+            app:layout_constraintTop_toBottomOf="@id/describe_label_2">
+
+        </EditText>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/booking_button"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_margin="@dimen/vertical_margin"
+            android:background="@drawable/button_background"
+            android:fontFamily="@font/inter_bold"
+            android:text="Далее"
+            android:textAllCaps="false"
+
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/booked"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:layout_margin="@dimen/vertical_margin"
+            android:background="@drawable/button_background"
+            android:fontFamily="@font/inter_bold"
+            android:text="Мои Бронирования"
+            android:textColor="@color/white"
+            android:textAllCaps="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/booking_button" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
