--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,7 +23,7 @@
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:background="@drawable/button_blue_shape"
+            android:background="@drawable/blue_shape"
             android:fontFamily="@font/inter_bold"
             android:text="Выйти  из аккаунта"
             android:textAllCaps="false"
@@ -41,7 +41,7 @@
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:background="@drawable/button_blue_shape"
+            android:background="@drawable/blue_shape"
             android:fontFamily="@font/inter_bold"
             android:text="Удалить аккаунт"
             android:textAllCaps="false"
@@ -76,7 +76,7 @@
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:background="@drawable/button_blue_shape"
+            android:background="@drawable/blue_shape"
             android:fontFamily="@font/inter_bold"
             android:text="Изменить данные"
             android:textAllCaps="false"
