--- a/app/src/main/res/layout/fragment_rent.xml
+++ b/app/src/main/res/layout/fragment_rent.xml
@@ -86,7 +86,7 @@
             app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
         <EditText
-            android:id="@+id/textInputLayout"
+            android:id="@+id/issue_text"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/input_edittext_background"
@@ -115,7 +115,7 @@
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/issue_text" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/booked"
