--- a/app/src/main/res/layout/rent_time.xml
+++ b/app/src/main/res/layout/rent_time.xml
@@ -28,7 +28,7 @@
         android:layout_marginStart="84dp"
         android:layout_marginEnd="84dp"
         android:layout_marginBottom="8dp"
-        android:background="@drawable/button_blue_shape"
+        android:background="@drawable/blue_shape"
         android:elevation="4dp"
         android:fontFamily="@font/inter_bold"
         android:padding="16dp"
