--- a/app/src/main/res/drawable/button_blue_shape.xml
+++ b/app/src/main/res/drawable/button_blue_shape.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
-    <corners android:radius="14dp"/>
-    <stroke android:width="10px" android:color="@color/blue" />
-
+    <solid android:color="@color/blue"/>
+    <corners android:radius="24dp"/>
 
 </shape>
