--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,113 +2,94 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:contentDescription="123"
-
     android:layout_width="match_parent"
     android:layout_height="700dp"
     android:fillViewport="true"
     tools:context=".ProfileFragment"
-    android:padding="0dp">
+    android:padding="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="42dp"
-        android:paddingRight="42dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        android:paddingLeft="45dp"
+        android:paddingRight="45dp"
         tools:context=".ProfileActiviry">
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/exitAccount"
-            android:layout_width="205dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/blue_shape"
-            android:fontFamily="@font/inter_bold"
-            android:text="Выйти  из аккаунта"
-            android:textAllCaps="false"
-            android:textColor="@color/white4"
-
-            android:textSize="20sp"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/changeAccount" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/deleteAccount"
-            android:layout_width="205dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/blue_shape"
-            android:fontFamily="@font/inter_bold"
-            android:text="Удалить аккаунт"
-            android:textAllCaps="false"
-            android:textColor="@color/white4"
-
-            android:textSize="20sp"
-
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/exitAccount" />
-
 
         <TextView
             android:id="@+id/title_profile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:fontFamily="@font/inter_bold"
             android:gravity="center"
             android:text="Настройки профиля"
-
             android:textColor="@color/blue"
-            android:textSize="40sp"
+            android:textSize="35sp"
+
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/changeAccount"
+            android:id="@+id/buttonLogin"
             android:layout_width="205dp"
             android:layout_height="60dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/blue_shape"
+            android:layout_marginBottom="4dp"
+            android:background="@drawable/button_blue_shape"
             android:fontFamily="@font/inter_bold"
             android:text="Изменить данные"
             android:textAllCaps="false"
             android:textColor="@color/white4"
             android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextText3"
+            app:layout_constraintVertical_bias="0.967" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/inter_extralight"
+            android:text="Логин"
+
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_profile" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="2dp"
             android:fontFamily="@font/inter_extralight"
-            android:text="Email"
+
+            android:text="ФИО"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextText2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.25"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/title_profile" />
+            app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
             android:fontFamily="@font/inter_extralight"
+            android:text="Институт"
 
-            android:text="Пароль"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextText5"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -118,11 +99,12 @@
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginBottom="2dp"
             android:fontFamily="@font/inter_extralight"
-            android:hint="ФИО"
-
+            android:hint="Электронная  почта"
             android:textSize="20sp"
+
+            app:layout_constraintBottom_toTopOf="@+id/editTextText4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -132,14 +114,53 @@
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
             android:fontFamily="@font/inter_extralight"
+            android:text="Пароль"
 
-            android:text="Институт"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextText3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextText4" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:fontFamily="@font/inter_extralight"
+            android:text="Номер телефона"
+
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/editTextText6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextText3" />
+
+        <EditText
+            android:id="@+id/editTextText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:background="@drawable/button_time_shape"
+            android:ems="10"
+            android:fontFamily="@font/inter_light"
+            android:hint="Логин"
+            android:inputType="text"
+            android:minHeight="48dp"
+            android:padding="5dp"
+            android:paddingLeft="10dp"
+            android:rotationX="7"
+            android:textColorHint="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/textView6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            tools:textSize="20sp" />
 
         <EditText
             android:id="@+id/editTextText2"
@@ -147,18 +168,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="1dp"
 
+            android:layout_marginBottom="10dp"
             android:background="@drawable/button_time_shape"
 
             android:ems="10"
             android:fontFamily="@font/inter_light"
-            android:hint="Email"
+            android:hint="ФИО"
             android:inputType="text"
             android:minHeight="48dp"
-            android:textColor="@color/black"
-
             android:paddingLeft="10dp"
-            android:textColorHint="@drawable/selector"
+            android:textColorHint="@color/black"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView7"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -168,18 +189,16 @@
 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:background="@drawable/button_time_shape"
             android:ems="10"
             android:fontFamily="@font/inter_light"
-            android:hint="Институт"
-            android:inputType="text"
+            android:hint="Пароль"
+            android:inputType="textPassword"
             android:minHeight="48dp"
             android:padding="5dp"
             android:paddingLeft="10dp"
-            android:textColor="@color/black"
-
-            android:textColorHint="@drawable/selector"
+            android:textColorHint="@color/black"
+            app:layout_constraintBottom_toTopOf="@+id/textView10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -189,18 +208,19 @@
             android:id="@+id/editTextText4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/button_time_shape"
             android:ems="10"
             android:fontFamily="@font/inter_light"
-            android:textColor="@color/black"
 
-            android:hint="ФИО"
+            android:hint="Электронная почта"
             android:inputType="text"
             android:minHeight="48dp"
             android:padding="5dp"
             android:paddingLeft="10dp"
-            android:textColorHint="@drawable/selector"
+            android:textColorHint="@color/black"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView9"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
@@ -210,21 +230,46 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/button_time_shape"
             android:ems="10"
-            android:inputType="textPassword"
+
             android:fontFamily="@font/inter_light"
-            android:hint="Пароль"
+            android:hint="Институт"
+            android:inputType="text"
             android:minHeight="48dp"
-            android:textColor="@color/black"
 
             android:padding="5dp"
             android:paddingLeft="10dp"
-            android:textColorHint="@drawable/selector"
+            android:textColorHint="@color/black"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/textView8"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <EditText
+            android:id="@+id/editTextText6"
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="9dp"
+            android:background="@drawable/button_time_shape"
+            android:ems="10"
+            android:fontFamily="@font/inter_light"
+            android:hint="Номер телефона"
+            android:inputType="text"
+            android:minHeight="48dp"
+            android:padding="5dp"
+            android:paddingLeft="10dp"
+            android:textColorHint="@color/black"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
