--- a/app/src/main/res/layout/list_time.xml
+++ b/app/src/main/res/layout/list_time.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/background"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:background="@drawable/button_green_shape"
+    android:background="@drawable/button_time_shape"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:layout_marginStart="16dp"
@@ -18,6 +17,6 @@
         android:fontFamily="@font/inter_bold"
         android:gravity="center"
         android:text="10:00 - 11:00"
-        android:textColor="@color/green"
-        android:textSize="24sp" />
+        android:textColor="@color/black"
+        android:textSize="44sp" />
 </LinearLayout>
