--- a/app/src/main/res/layout/rent_time.xml
+++ b/app/src/main/res/layout/rent_time.xml
@@ -10,10 +10,6 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/time_recycler"
         android:layout_width="match_parent"
-        android:layout_marginLeft="41dp"
-        android:layout_marginRight="41dp"
-        android:layout_marginBottom="75dp"
-
         android:layout_height="match_parent"
         android:layout_above="@id/booking_button"
         tools:layout_editor_absoluteX="16dp"
@@ -27,14 +23,14 @@
 
         android:layout_marginStart="84dp"
         android:layout_marginEnd="84dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/blue_shape"
+        android:layout_marginBottom="28dp"
+        android:background="@drawable/button_blue_shape"
         android:elevation="4dp"
         android:fontFamily="@font/inter_bold"
         android:padding="16dp"
         android:text="Забронировать"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/time_recycler"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.AppCompatButton>
