Edt rent fragment

--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="409dp"
-    android:layout_height="660dp"
+    android:layout_height="match_parent"
     android:contentDescription="123"
     android:fillViewport="true"
     android:padding="20dp"
