--- a/app/src/main/res/layout/fragment_rent.xml
+++ b/app/src/main/res/layout/fragment_rent.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
 
-    android:layout_height="700dp"
+    android:layout_height="match_parent"
     android:contentDescription="123"
     android:fillViewport="true"
     android:padding="0dp"
