Fix some and add validation to RegisterFragment

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -110,7 +110,7 @@
                 android:background="@drawable/button_time_shape"
                 android:fontFamily="@font/inter_light"
                 android:gravity="center"
-                android:hint="Институт"
+                android:hint="Группа"
 
                 android:inputType="textEmailAddress"
                 android:minHeight="48dp"
